stitch/src/snapshots/stitch__parser__tests__parses_list_literal.snap
---
source: stitch/src/parser.rs
expression: "p(\"[1, 2, 3]\")"
---
List(
    [
        Int(
            1,
        ),
        Int(
            2,
        ),
        Int(
            3,
        ),
    ],
)
