stitch/src/snapshots/stitch__parser__tests__parses_logical_not.snap
---
source: stitch/src/parser.rs
expression: "parse(\"not a\")"
---
Unary {
    op: Not,
    operand: Var(
        "a",
    ),
}
