stitch/src/snapshots/stitch__parser__tests__parses_map_literal.snap
---
source: stitch/src/parser.rs
expression: "p(\"[a: 1, b: 2]\")"
---
Map(
    [
        (
            Var(
                "a",
            ),
            Int(
                1,
            ),
        ),
        (
            Var(
                "b",
            ),
            Int(
                2,
            ),
        ),
    ],
)
