stitch/src/snapshots/stitch__parser__tests__parses_match_with_literals_and_wildcard.snap
---
source: stitch/src/parser.rs
expression: "p(r#\"match n { 0 => \"zero\"  1 => \"one\"  _ => \"many\" }\"#)"
---
Match {
    subject: Var(
        "n",
    ),
    arms: [
        MatchArm {
            pattern: Int(
                0,
            ),
            guard: None,
            body: Str(
                [
                    Lit(
                        "zero",
                    ),
                ],
            ),
        },
        MatchArm {
            pattern: Int(
                1,
            ),
            guard: None,
            body: Str(
                [
                    Lit(
                        "one",
                    ),
                ],
            ),
        },
        MatchArm {
            pattern: Wildcard,
            guard: None,
            body: Str(
                [
                    Lit(
                        "many",
                    ),
                ],
            ),
        },
    ],
}
