stitch/src/snapshots/stitch__parser__tests__parses_mixed_positional_and_named_arguments.snap
---
source: stitch/src/parser.rs
expression: "p(\"f(a, scale: factor * 2)\")"
---
Call {
    callee: Var(
        "f",
    ),
    args: [
        Arg {
            label: None,
            value: Var(
                "a",
            ),
        },
        Arg {
            label: Some(
                "scale",
            ),
            value: Binary {
                op: Mul,
                left: Var(
                    "factor",
                ),
                right: Int(
                    2,
                ),
            },
        },
    ],
}
