stitch/src/snapshots/stitch__parser__tests__parses_multi_param_lambda.snap
---
source: stitch/src/parser.rs
expression: "p(\"(a, b) -> a + b\")"
---
Lambda {
    params: [
        "a",
        "b",
    ],
    body: Binary {
        op: Add,
        left: Var(
            "a",
        ),
        right: Var(
            "b",
        ),
    },
}
