stitch/src/snapshots/stitch__parser__tests__parses_multiple_items.snap
---
source: stitch/src/parser.rs
expression: "prog(\"prod Point(x: Int, y: Int)  sum Dir = North | South\")"
---
[
    Prod {
        name: "Point",
        generics: [],
        fields: [
            Field {
                name: Some(
                    "x",
                ),
                mutable: false,
                ty: Name {
                    name: "Int",
                    args: [],
                },
                public: false,
            },
            Field {
                name: Some(
                    "y",
                ),
                mutable: false,
                ty: Name {
                    name: "Int",
                    args: [],
                },
                public: false,
            },
        ],
        public: false,
    },
    Sum {
        name: "Dir",
        generics: [],
        variants: [
            Variant {
                name: "North",
                fields: [],
            },
            Variant {
                name: "South",
                fields: [],
            },
        ],
        public: false,
    },
]
