stitch/src/snapshots/stitch__parser__tests__parses_negation.snap
---
source: stitch/src/parser.rs
expression: "parse(\"-x\")"
---
Unary {
    op: Neg,
    operand: Var(
        "x",
    ),
}
