stitch/src/snapshots/stitch__parser__tests__parses_nested_list.snap
---
source: stitch/src/parser.rs
expression: "p(\"[[1], [2, 3]]\")"
---
List(
    [
        List(
            [
                Int(
                    1,
                ),
            ],
        ),
        List(
            [
                Int(
                    2,
                ),
                Int(
                    3,
                ),
            ],
        ),
    ],
)
